# VoiceClip

./: Cargo.toml  GUIDE.md  LLM_Tasks.md  README.md  VoiceClip_PRD.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
assets/: voiceclip.desktop
src/: audio.rs  config.rs  db.rs  delivery.rs  hotkey.rs  main.rs  main.tsx  whisper.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  config.rs  db.rs  delivery.rs  hotkey.rs  lib.rs  main.rs  whisper.rs
src/components/: Badge.css  Badge.tsx  ContextMenu.tsx  SettingsWindow.tsx  StatsWindow.tsx
src/lib/: commands.ts
src/ui/: badge.rs  mod.rs  settings.rs  stats.rs
