[package]
name = "VoiceClip"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arboard = "3"
cpal = "0.15"
dasp_sample = "0.11.0"
directories = "6.0.0"
gtk4 = "0.10"
hound = "3.5.1"
notify-rust = "4"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.3"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = { version = "0.13.2", features = ["tokio"] }
gtk4-layer-shell = "0.7.1"

[target.'cfg(target_os = "windows")'.dependencies]
global-hotkey = "0.6"
