[package]
name = "VoiceClip"
version = "0.2.0"
edition = "2021"

[lib]
name = "voiceclip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
arboard = "3"
cpal = "0.15"
dasp_sample = "0.11.0"
directories = "6"
hound = "3.5.1"
notify-rust = "4"
rusqlite = { version = "0.38", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
toml = "1"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = { version = "0.13.2", features = ["tokio"] }

[target.'cfg(target_os = "windows")'.dependencies]
global-hotkey = "0.6"
